Miner style adjustments

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -53,6 +53,7 @@
         padding: 10px 15px;
         background-color: #e3d343;
         border: none;
+        border-radius: 4px;
         width: 192.038px;
         margin: 0 auto;
     }
