--- a/scss/_about_me.scss
+++ b/scss/_about_me.scss
@@ -1,5 +1,11 @@
 .about_me_main {
     margin: 0 20px;
+    & a {
+        font-weight: bold;
+        &:hover {
+            color: $_brass_yellow;
+        }
+    }
 }
 .about_me_title_container {
     width: 100%;
