--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,6 +4,7 @@ header {
 .enigma {
     height: 100vh;
     width: 100%;
+    display: cover;
 }
 .name_career_menu {
     position: absolute;
@@ -13,14 +14,13 @@ header {
     width: auto;
     padding-left: 10px;
     border-left: 5px dashed $_brass_yellow;
-    color: #000;
+    color: $_brass_yellow;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    //align-items: flex-start;
 }
 .name_career {
-    padding-right: 10px
+    padding-right: 10px;
 }
 .name {
     font-size: 3rem;
