--- a/scss/_side_column.scss
+++ b/scss/_side_column.scss
@@ -7,7 +7,7 @@
         flex-direction: row;
         justify-content: center;
         background-color: $_brass_yellow;
-        width: 159px;
+        width: 100%;
         .side_column_title {
             font-size: 2.7rem;
             border: 6px dashed transparent;
