--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -86,3 +86,8 @@
         margin-right: 15px;
     }
 }
+@media screen and (min-width:1495px) {
+    .contact_form {
+        width: 1300px;
+    }
+}
