--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -18,6 +18,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 .name_career {
     padding-right: 10px;
