--- a/scss/_side_column.scss
+++ b/scss/_side_column.scss
@@ -1,5 +1,6 @@
 .side_column {
     width: 165px;
+    min-width: 165px;
     display: none;
     align-items: center;
     .side_column_title_container {
