--- a/scss/_ce.scss
+++ b/scss/_ce.scss
@@ -2,8 +2,10 @@
     width: 100%;
     background-color: #4b4b4c;
     padding: 0 20px;
+    height: 100vh;
     & p {
         font-weight: bold;
+        color: #faea5e;
     }
 }
 .coding_examples_title_container {
