--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -83,3 +83,8 @@
         justify-content: center;
     }
 }
+@media screen and (min-width:1495px) {
+    .project_title_container {
+        width: 1300px;
+    }
+}
