--- a/scss/main.scss
+++ b/scss/main.scss
@@ -67,9 +67,9 @@ a {
         display: block;
     }
 }
-@media screen and (min-width:768px) {
+// @media screen and (min-width:768px) {
     body {
         display: flex;
         flex-direction: row
     }
-}
+// }
