The side column now displays when the button is pressed  my name. is typed out when the page loads.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -24,16 +24,17 @@ header {
     padding-right: 10px;
 }
 .name {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-top: 0;
     margin-bottom: 0;
 }
-span {
+.name span {
     opacity: 0;
 }
-.fade {
+.name .fade {
     opacity: 1;
 }
+
 .career {
     font-size: 1.2rem;
     font-weight: bold;
@@ -49,3 +50,4 @@ span {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
