--- a/scss/_scs_scheme.scss
+++ b/scss/_scs_scheme.scss
@@ -14,6 +14,7 @@
         border-bottom: 6px dashed #000;
     }
     .scs_title {
+        text-align: center;
         width: 350px;
         padding: 15px;
         border: 6px dashed #000;
