--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,9 +5,6 @@
 //header 
 @import "header";
 
-//side column 
-@import "side_column";
-
 //projects 
 @import "projects";
 
@@ -23,7 +20,8 @@
 //about me
 @import "about_me";
 
-
+//side column 
+@import "side_column";
 
 * {
     box-sizing: border-box;
@@ -37,11 +35,6 @@ body {
     flex-direction: row
     
 }
-.down_arrow {
-    padding: 5px 25px;
-    background-color: $_brass_yellow;
-    border-radius: 4px;
-}
 a {
     text-decoration: none;
     color: #000;
@@ -54,7 +47,9 @@ a {
     // align-self: flex-start;
     margin-right: 15px;
     display: none;
-    
+    &:hover {
+        cursor: pointer;
+    }
 }
 .menu_title {
     padding-top: 15px;
