I changed the button to light up when they are hovered over.

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -57,6 +57,9 @@
         width: 192.038px;
         margin: 0 auto;
         cursor: pointer;
+        &:hover {
+            background-color:  #FFD700;    
+        }
     }
 }
 #error {
