--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -49,8 +49,10 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     cursor: pointer;
+    &:hover {
+        background-color:  #FFD700;
+    }
 }    
-
-.gold_bg {
+.brass_bg {
     background-color: $_brass_yellow;
 }
