--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,6 +1,4 @@
-// .form_wrapper {
-//     padding: 0 15px;
-// }
+
 .form_title_container {
     margin: 0 auto 30px;
     max-width: 650px;
@@ -27,7 +25,6 @@
             font-weight: bold;
         }
         & input {
-            
             padding: 5px 10px;
             border: none;
             border-bottom: 3px dashed #000;
@@ -48,20 +45,21 @@
             }
         }
     }
-    & button {
-        font-weight: bold;
-        padding: 10px 15px;
-        background-color: #e3d343;
-        border: none;
-        border-radius: 4px;
-        width: 192.038px;
-        margin: 0 auto;
-        cursor: pointer;
-        &:hover {
-            background-color:  #FFD700;    
-        }
+}
+#contact_form .form_button {
+    font-weight: bold;
+    padding: 10px 15px;
+    background-color: #e3d343;
+    border: none;
+    border-radius: 0;
+    width: 192.038px;
+    margin: 0 auto;
+    cursor: pointer;
+    &:hover {
+        background-color: #FFD700;    
     }
 }
+
 #error {
     font-weight: bold; 
     text-align: center;     
