--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -28,6 +28,16 @@
     background-color: $_brass_yellow;
     border-radius: 20px 20px 0 0;
     margin: 0 auto 30px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: .5s ease;
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    &:hover {
+        top: -10px;
+    } 
 }
 .project_img {
     width: 100%;
