The box shadow on the project cards have been removed

--- a/scss/_side_column.scss
+++ b/scss/_side_column.scss
@@ -23,7 +23,7 @@
         padding: 0;
         margin: 0;
         list-style: none;
-        border: 6px dashed $_brass_yellow;
+        border: 6px solid $_brass_yellow;
         border-top: none;
         & li {
             padding: 10px;
