--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -52,6 +52,9 @@ header {
     &:hover {
         background-color:  #FFD700;
     }
+    & i {
+        font-size: 1.2rem;
+    }
 }    
 .brass_bg {
     background-color: $_brass_yellow;
