--- a/scss/_side_column.scss
+++ b/scss/_side_column.scss
@@ -3,6 +3,9 @@
     min-width: 165px;
     display: none;
     align-items: center;
+    border: 6px solid $_brass_yellow;
+    border-top: none;
+    z-index: 4;
     .side_column_title_container {
         display: flex;
         flex-direction: row;
@@ -19,12 +22,11 @@
         }
     }
     & ul {
-        height: 100%;
         padding: 0;
         margin: 0;
         list-style: none;
-        border: 6px solid $_brass_yellow;
-        border-top: none;
+        
+        
         & li {
             padding: 10px;
             margin: 5px;
@@ -36,6 +38,27 @@
         }
     }
 }
+.github {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top: 6px solid $_brass_yellow;
+    border-bottom: 6px solid $_brass_yellow;
+    width: 85%;
+    padding: 15px; 
+    margin-top: 15px;
+    & h2 {
+        margin: 0;
+        padding-bottom: 15px;
+    }
+}
+.github_link i{
+    font-size: 4rem;
+    &:hover {
+        color: $_brass_yellow;
+    }
+}
+
 .active {
     display: block;
 }
