--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,8 +32,23 @@
 body {
     font-family: 'Courier prime', Courier, monospace;
     display: flex;
-    flex-direction: row
+    flex-direction: row;
     
+    
+}
+.cover {
+    position: fixed;
+    z-index: 3;
+    display: none;
+    transition: opacity .5s;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    cursor: pointer; 
+    background-color: rgba(0,0,0,0.5);
 }
 a {
     text-decoration: none;
