--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,12 +1,21 @@
 header {
     position: relative;
+    .menu_button {
+        position: absolute;
+        top: 56px;
+        left: 56px;
+        transform: translate(-50%, -50%);
+    }
 }
 .enigma {
     height: 100vh;
     width: 100%;
     object-fit: cover;
 }
-.name_career_menu {
+.name_career {
+    padding-right: 10px;
+    padding-left: 10px;
+    border-left: 5px dashed $_brass_yellow;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -14,14 +23,8 @@ header {
     width: auto;
     color: $_brass_yellow;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-}
-.name_career {
-    padding-right: 10px;
-    padding-left: 10px;
-    border-left: 5px dashed $_brass_yellow;
 }
 .name {
     font-size: 3rem;
@@ -38,6 +41,7 @@ header {
 .career {
     font-size: 1.2rem;
     font-weight: bold;
+    width: max-content;
 }
 .down_button {
     padding: 5px 25px 2px;
