--- a/scss/_side_column.scss
+++ b/scss/_side_column.scss
@@ -6,6 +6,7 @@
     border: 6px solid $_brass_yellow;
     border-top: none;
     z-index: 4;
+    background-color: white;
     .side_column_title_container {
         display: flex;
         flex-direction: row;
@@ -60,7 +61,9 @@
 }
 
 .active {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 @media screen and (min-width:768px) {
     .side_column {
