--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,6 +1,6 @@
 
 .form_title_container {
-    margin: 0 auto 45px;
+    margin: 0 auto 5px;
     max-width: 650px;
     border-bottom: 6px dashed #000;
     .form_title {
@@ -74,6 +74,27 @@
     padding: 15px;
     border: 3px dashed green;
     margin-bottom: 30px;    
+}
+.error {
+    color: #ff0033;
+    font-weight: bold;
+    max-width: fit-content;
+    margin-bottom: 0;
+    padding: 5px;
+    border: 3px dashed #ff0033;
+}
+.success {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: fit-content;
+    color: #4BB543;
+    font-weight: bold;
+    padding: 5px;
+    border: 3px dashed #4BB543;
+}
+.no_message{
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen and (min-width:992px) and (max-width:1200px) {
