--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -41,7 +41,7 @@
 .project_card_bottom {
     padding: 10px;
     object-fit: cover;
-    & h2 {
+    & h3 {
         margin-top: 0;
     }
 }
@@ -92,8 +92,9 @@
         flex-wrap: wrap;
     }
     .project_card {
-        width: 310px;
-        margin: 0 7.5px 30px 7.5px;
+        // width: 310px;
+        width: 360px;
+        margin: 0 15px 30px 15px;
     }
     .pc_first_rows {
         display: flex;
