--- a/scss/_scs_scheme.scss
+++ b/scss/_scs_scheme.scss
@@ -34,6 +34,9 @@
     & p {
         margin-top: 0;
     }
+    span {
+        margin-bottom: 16px;
+    }
 }
 .scs_main span {
     font-weight: bold;
