--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -47,9 +47,9 @@
     }
 }
 
-.project_links {    
+.project_links {   
+    display: flex;
     font-weight: bold;
-    margin-top: auto;
     & p {
         border-bottom: 3px dashed #000;
         margin: 20px 0 0 0;
